--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" href="/favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Chat App</title>
-    </head>
-    <body>
-        <h1>Aplicacion de chat</h1>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chat App</title>
+</head>
+
+<body>
+    <h1>Aplicacion de chat</h1>
+
+    <textarea id="message"></textarea>
+    <button onclick="sendMessage()">Send</button>
+
+    <div id="msgContainer">
+        <ul id="msgList" style="list-style: none;"></ul>
+    </div>
+</body>
+<script type="text/javascript" src="js/index.js"></script>
+
 </html>
